--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-calendars": "^1.1301.0",
+    "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-pager-view": "^6.2.1",
@@ -38,6 +40,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-unimodules": "^0.14.10",
     "react-redux": "^8.1.2",
+    "react-select": "^5.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.7"
