--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bas-software/react-native-calendars": "^1.26.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -27,7 +28,6 @@
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-calendars": "^1.1301.0",
     "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
