--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "dotenv": "^16.3.1",
     "expo": "^49.0.9",
+    "expo-constants": "^14.4.2",
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
@@ -60,6 +62,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
+    "path": "^0.12.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
