--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "^49.0.9",
     "expo-constants": "^14.4.2",
@@ -37,7 +38,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^13.13.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-unimodules": "^0.14.10",
